update: register page v1.0

--- a/lecture10/pset10/appetieats/templates/restaurant-setup.html
+++ b/lecture10/pset10/appetieats/templates/restaurant-setup.html
@@ -73,7 +73,7 @@
                 <div class="input-t-g">
                     <div class="time-row mb-2">
                         <div class="form-check form-switch">
-                            <input class="form-check-input mr-1vw" type="checkbox" id="everyday">
+                            <input class="form-check-input mr-1vw" type="checkbox" id="everyday" checked>
                             <label class="form-check-label mt-1 mb-2" for="everyday">Same everyday</label>
                         </div>
                         <div class="input-t d-flex" id="everyday-input">
