update: admin page

--- a/lecture10/pset10/appetieats/templates/index.html
+++ b/lecture10/pset10/appetieats/templates/index.html
@@ -10,7 +10,7 @@
         {% block link %}{% endblock %}
 
         <!-- https://favicon.io/emoji-favicons/magnifying-glass-tilted-left/ -->
-        <link href="/static/favicon.ico" rel="icon">
+        <link href="/static/assets/ico/favicon.ico" rel="icon">
 
         <title>qr.eat: {% block title %}{% endblock %}</title>
     </head>
