--- a/lecture10/pset10/appetieats/templates/landing.html
+++ b/lecture10/pset10/appetieats/templates/landing.html
@@ -12,9 +12,9 @@
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
         <!-- https://favicon.io/emoji-favicons/spaghetti/ -->
-        <link href="/static/favicon.ico" rel="icon">
+        <link href="/static/assets/ico/favicon.ico" rel="icon">
 
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/css/styles.css" rel="stylesheet">
 
         <title>AppetiEats</title>
 
@@ -45,7 +45,7 @@
             <a href="/register" class="btn button mt-4">Join us</a>
         </div>
         <div class="home-img">
-            <img class="phone-img" src="static/phone.png" alt="appetiEats app image">
+            <img class="phone-img" src="static/assets/img/phone.png" alt="appetiEats app image">
         </div>
         </session>
 
