update: admin page

--- a/lecture10/pset10/appetieats/templates/auth/register.html
+++ b/lecture10/pset10/appetieats/templates/auth/register.html
@@ -1,4 +1,5 @@
-{% extends "layout-login-form.html" %}
+{% extends "auth/layout-login-form.html" %}
+
 {% block title %}Register{% endblock %}
 
 {% block head %}
