--- a/lecture10/pset10/appetieats/templates/auth/login.html
+++ b/lecture10/pset10/appetieats/templates/auth/login.html
@@ -1,19 +1,22 @@
-{% extends "layout-login-form.html" %}
+{% extends "auth/layout-login-form.html" %}
+
+{% block title %}Login{% endblock %}
+
 {% block img %}
-<img src="static/undraw_cooking_p7m1.svg" alt="cooking image">
+<img src="static/assets/img/undraw_cooking_p7m1.svg" alt="cooking image">
 {% endblock %}
 
 {% block form %}
 <div class="form">
-    <form method="post" action="/register" >
+    <form method="post" action="/login" >
         <div class="form-header">
 
             <div class="title">
-                <h1>Register</h1>
+                <h1>Login</h1>
             </div>
 
             <div class="login-button">
-                <a href="/login">Login</a>
+                <a href="/register">Register</a>
             </div>
         </div>
 
@@ -27,12 +30,8 @@
                 <label for="password" class="">Password: </label>
                 <input id="password" name="password" class="" type="password" placeholder="Type your password" required>
             </div>
-
-            <div class="input-b">
-                <label for="confirm" class="">Confirm password: </label>
-                <input id="confirm" name="confirm" type="password" placeholder="Confirm your password" required>
-            </div>
         </div>
-        <button class="button button-sm" type="submit">Register</button>
+        <button class="button button-sm" type="submit">Login</button>
     </form>
+</div>
 {% endblock %}
