update: admin route

--- a/lecture10/pset10/appetieats/templates/admin/admin.html
+++ b/lecture10/pset10/appetieats/templates/admin/admin.html
@@ -65,7 +65,7 @@
                 <span class="nav_text">Settings</span>
             </a>
         </nav>
-        <script src="static/js/nav-click.js"></script>
+        <script src="/static/js/nav-click.js"></script>
 
     </body>
 
