update: admin route

--- a/lecture10/pset10/appetieats/templates/auth/register.html
+++ b/lecture10/pset10/appetieats/templates/auth/register.html
@@ -7,11 +7,11 @@
 .input-b {width: 49%;}
 .w-49 {width: 49%;}
 </style>
-<script src="static/js/steps.js"></script>
+<script src="/static/js/steps.js"></script>
 {% endblock %}
 
 {% block img %}
-<img src="static/assets/img/undraw_cooking_p7m1.svg" alt="cooking image">
+<img src="/static/assets/img/undraw_cooking_p7m1.svg" alt="cooking image">
 {% endblock %}
 
 {% block form %}
@@ -239,6 +239,6 @@
             </div>
         </div>
     </form>
-<script src="static/js/weekdays-hide.js"></script>
-<script src="static/js/open-hour-format.js"></script>
+<script src="/static/js/weekdays-hide.js"></script>
+<script src="/static/js/open-hour-format.js"></script>
 {% endblock %}
