update: auth route

--- a/lecture10/pset10/appetieats/templates/auth/register.html
+++ b/lecture10/pset10/appetieats/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends "auth/layout-login-form.html" %}
+{% extends "/auth/layout-login-form.html" %}
 
 {% block title %}Register{% endblock %}
 
@@ -16,7 +16,7 @@
 
 {% block form %}
 <div class="form">
-    <form method="post" action="#" >
+    <form method="post" action="/register" >
         <div class="form-header">
 
             <div class="title">
