--- a/lecture10/pset10/appetieats/templates/admin/settings.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings.html
@@ -3,7 +3,24 @@
 {% block title %}Settings{% endblock %}
 
 {% block main %}
-<p>Settings Page</p>
+<div class="form-container mx-auto text-center">
+    <h1 class="mt-5 mb-3">Settings</h1>
+    <div class="list-group">
+        <a href="/change-password" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">lock_reset</span>
+            <span class="flex-grow-1 text-start">
+                Change password
+            </span>
+            <span class="material-icons nav_icons">chevron_right</span>
+        </a>
+        <a href="/logout" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">logout</span>
+            <span class="flex-grow-1 text-start">
+                Logout
+            </span>
+        </a>
+    </div>
+</div>
 {% endblock %}
 
 {% block settings %}nav_link--active{% endblock %}
