--- a/lecture10/pset10/appetieats/templates/admin/settings.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings.html
@@ -6,6 +6,34 @@
 <div class="form-container mx-auto text-center">
     <h1 class="mt-5 mb-3">Settings</h1>
     <div class="list-group">
+        <a href="/admin/settings/add" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">add_circle</span>
+            <span class="flex-grow-1 text-start">
+                Add dish
+            </span>
+            <span class="material-icons nav_icons">chevron_right</span>
+        </a>
+        <a href="/#" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">edit</span>
+            <span class="flex-grow-1 text-start">
+                Edit menu
+            </span>
+            <span class="material-icons nav_icons">chevron_right</span>
+        </a>
+        <a href="/#" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">edit_note</span>
+            <span class="flex-grow-1 text-start">
+                Manage sessions
+            </span>
+            <span class="material-icons nav_icons">chevron_right</span>
+        </a>
+        <a href="/#" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
+            <span class="material-icons nav_icons mx-1">manage_accounts</span>
+            <span class="flex-grow-1 text-start">
+                Edit restaurant info
+            </span>
+            <span class="material-icons nav_icons">chevron_right</span>
+        </a>
         <a href="/change-password" class="list-group-item list-group-item-action d-flex align-items-start justify-content-start">
             <span class="material-icons nav_icons mx-1">lock_reset</span>
             <span class="flex-grow-1 text-start">
