--- a/lecture10/pset10/appetieats/templates/admin/admin.html
+++ b/lecture10/pset10/appetieats/templates/admin/admin.html
@@ -51,8 +51,10 @@
         -->
 
         <main>
-            <div class="main_content">
-            {% block main %}{% endblock %}
+            <div class="main_box">
+                <div class="main_content">
+                    {% block main %}{% endblock %}
+                </div>
             </div>
         </main>
 
