--- a/lecture10/pset10/appetieats/templates/admin/settings/add.html
+++ b/lecture10/pset10/appetieats/templates/admin/settings/add.html
@@ -1,9 +1,90 @@
 {% extends "admin/admin.html" %}
 
 {% block title %}Add{% endblock %}
+{% block head %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropper/2.3.3/cropper.css">
+{% endblock %}
 
 {% block main %}
-<p>add page</p>
+<div class="form-container mx-auto">
+    <h1 class="mt-5 mb-3 text-center">Add dish</h1>
+    <form>
+        <div class="form-row">
+            <div class="col-12 mb-3">
+                <label for="name">Dish name</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="e.g., hamburger, macaroni..." required>
+                <div class="invalid-feedback">
+                    Insert a name of dish
+                </div>
+            </div>
+        </div>
+        <div class="col-12 mb-3">
+            <label for="price">Price</label>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupPrepend">$<span>
+                </div>
+                <input type="text" class="form-control" id="price" name="price" required>
+            </div>
+        </div>
+        <div class="col-12 mb-3">
+            <label for="category">Category</label>
+            <select class="form-select" id="category" name="category" required>
+                <option value="" selected disabled>Select a category</option>
+                {% for category in categories %}
+                <option value="{{ category['category_name'] }}">{{ category["category_name"] }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="col-12 mb-3">
+            <label for="barcode">Barcode</label>
+            <input type="text" class="form-control" id="barcode" name="barcode" placeholder="e.g., 108745..." required>
+            <div class="invalid-feedback">
+                Insert a valid barcode.
+            </div>
+        </div>
+        <div class="col-12 mb-3">
+            <label for="file" class="form-label">Dish image</label>
+            <input class="form-control" type="file" id="img" name="img">
+            <div class="invalid-feedback">
+                Insert a valid image.
+            </div>
+        </div>
+        <div id="image-form" class="col-12" style="display: none;" >
+            <canvas id="canvas" style="display: none; max-height: 250px;"></canvas>
+        </div>
+
+        <button class="btn btn-primary mt-3" type="submit">Add dish</button>
+    </form>
+
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/2.3.3/cropper.js"></script>
+
+<script src="/static/js/add/crop-image.js"></script>
+
+
+<script>
+    let priceInput = document.getElementById('price');
+
+    // Define a standard value for price field
+    priceInput.value = '0,00';
+
+    // Format the field price when reload page
+    let price = priceInput.value;
+    price = price.replace(/\D/g, '');
+    price = (price / 100).toFixed(2)
+    priceInput.value = price;
+
+    priceInput.addEventListener('input', function(event) {
+        let price = event.target.value;
+
+        price = price.replace(/\D/g, '');
+        price = (price / 100).toFixed(2)
+
+        event.target.value = price;
+    });
+</script>
 {% endblock %}
 
 {% block edit %}{% endblock %}
