--- a/lecture10/pset10/appetieats/templates/admin/admin.html
+++ b/lecture10/pset10/appetieats/templates/admin/admin.html
@@ -16,6 +16,7 @@
 
         <!-- https://favicon.io/emoji-favicons/spaghetti/ -->
         <link href="/static/assets/ico/favicon.ico" rel="icon">
+        <link href="/static/css/admin/add.css" rel="stylesheet">
 
         <!--
         <link href="/static/css/styles.css" rel="stylesheet">
